// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Always Show All 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Viser alle options også når valgt
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:14"
      aria-expanded="true"
      aria-label="Viser alle options også når valgt​​​​​"
      autocomplete="off"
      data-label="Viser alle options også når valgt"
      id="<removed>"
      list=":ds:14"
      placeholder=" "
      popovertarget=":ds:14"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        role="option"
        selected
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Controlled Independent Label Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg person
  </label>
  <ds-suggestion>
    <data
      aria-label="Lars, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="#004"
    >
      Lars
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:8"
      aria-expanded="true"
      aria-label="Velg person​​​​​"
      autocomplete="off"
      data-label="Velg person"
      id="<removed>"
      list=":ds:8"
      placeholder=" "
      popovertarget=":ds:8"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        label="Lars"
        role="option"
        selected
        tabindex="-1"
        value="#004"
      >
        Lars
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="James"
        role="option"
        tabindex="-1"
        value="#007"
      >
        James
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Nina"
        role="option"
        tabindex="-1"
        value="#113"
      >
        Nina
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Tove"
        role="option"
        tabindex="-1"
        value="#110"
      >
        Tove
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<div style="margin: var(--ds-size-2) 0;">
  Valgt person:
  <pre style="font-size: 14px; white-space: pre-wrap; width: 400px;">
    {"label":"Lars","value":"#004"}
  </pre>
</div>
<button
  data-variant="secondary"
  type="button"
>
  Sett Nina
</button>
`;

exports[`Controlled Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjoner
  </label>
  <ds-suggestion data-multiple>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <data
      aria-label="Stavanger, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Stavanger"
    >
      Stavanger
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:6"
      aria-expanded="true"
      aria-label="Velg destinasjoner, Navigate left to find 2 selected​​​​​"
      autocomplete="off"
      data-label="Velg destinasjoner"
      id="<removed>"
      list=":ds:6"
      placeholder=" "
      popovertarget=":ds:6"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-multiselectable="true"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      id="<removed>"
      popover="manual"
      role="listbox"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-selected="true"
        label="Sogndal"
        role="option"
        selected
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="true"
        label="Stavanger"
        role="option"
        selected
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal, Stavanger
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal, Stavanger
</button>
`;

exports[`Controlled Single 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Velg destinasjon
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:4"
      aria-expanded="true"
      aria-label="Velg destinasjon​​​​​"
      autocomplete="off"
      data-label="Velg destinasjon"
      id="<removed>"
      list=":ds:4"
      placeholder=" "
      popovertarget=":ds:4"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-multiselectable="false"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      hidden
      id="<removed>"
      popover="manual"
      role="listbox"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        label="Sogndal"
        role="option"
        selected
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin: var(--ds-size-2) 0;"
>
  Valgte reisemål: Sogndal
</p>
<button
  data-variant="primary"
  type="button"
>
  Sett reisemål til Sogndal
</button>
`;

exports[`Custom Filter Alt 1 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:10"
      aria-expanded="true"
      aria-label="Skriv inn et tall mellom 1-6​​​​​"
      autocomplete="off"
      data-label="Skriv inn et tall mellom 1-6"
      id="<removed>"
      list=":ds:10"
      placeholder=" "
      popovertarget=":ds:10"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="sogndal"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="oslo"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="brønnøysund"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="stavanger"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="trondheim"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="bergen"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
        value="lillestrøm"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Custom Filter Alt 2 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Skriv inn et tall mellom 1-6
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:12"
      aria-expanded="true"
      aria-label="Skriv inn et tall mellom 1-6​​​​​"
      autocomplete="off"
      data-label="Skriv inn et tall mellom 1-6"
      id="<removed>"
      list=":ds:12"
      placeholder=" "
      popovertarget=":ds:12"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Default Value 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <data
      aria-label="Sogndal, Press to remove"
      aria-selected="true"
      role="option"
      slot="items"
      tabindex="-1"
      value="Sogndal"
    >
      Sogndal
    </data>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:20"
      aria-expanded="true"
      aria-label="Velg en destinasjon​​​​​"
      autocomplete="off"
      data-label="Velg en destinasjon"
      id="<removed>"
      list=":ds:20"
      placeholder=" "
      popovertarget=":ds:20"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="true"
        role="option"
        selected
        tabindex="-1"
      >
        Sogndal
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Oslo
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Brønnøysund
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Stavanger
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Trondheim
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Bergen
      </u-option>
      <u-option
        aria-disabled="true"
        aria-hidden="true"
        aria-selected="false"
        disabled
        role="option"
        tabindex="-1"
      >
        Lillestrøm
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Fetch External 1`] = `
<ds-field lang="en">
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Search for countries (in english)
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:16"
      aria-expanded="true"
      aria-label="Search for countries (in english)​​​​​"
      autocomplete="off"
      data-label="Search for countries (in english)"
      id="<removed>"
      list=":ds:16"
      placeholder=" "
      popovertarget=":ds:16"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d countries"
      data-sr-singular="%d country"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`In Details 1`] = `
<details data-variant="default">
  <summary>
    Åpne details som har overflow: clip;
  </summary>
  <div>
    <ds-field>
      <label
        data-weight="medium"
        for="<removed>"
      >
        Velg en destinasjon
      </label>
      <ds-suggestion autofocus>
        <input
          aria-autocomplete="list"
          aria-controls=":ds:22"
          aria-expanded="true"
          aria-label="​​​​​"
          autocomplete="off"
          data-label
          id="<removed>"
          list=":ds:22"
          placeholder=" "
          popovertarget=":ds:22"
          role="combobox"
          type="text"
        >
        <del
          aria-label="Tøm"
          hidden
          role="button"
        >
        </del>
        <u-datalist
          aria-multiselectable="false"
          data-nofilter
          data-sr-plural="%d forslag"
          data-sr-singular="%d forslag"
          hidden
          id="<removed>"
          popover="manual"
          role="listbox"
          tabindex="-1"
        >
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Sogndal
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Oslo
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Brønnøysund
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Stavanger
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Trondheim
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Bergen
          </u-option>
          <u-option
            aria-disabled="false"
            aria-selected="false"
            role="option"
            tabindex="-1"
          >
            Lillestrøm
          </u-option>
        </u-datalist>
      </ds-suggestion>
    </ds-field>
  </div>
</details>
`;

exports[`Multiple 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion data-multiple>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:18"
      aria-expanded="true"
      aria-label="Velg en destinasjon, No selected​​​​​"
      autocomplete="off"
      data-label="Velg en destinasjon"
      form="#"
      id="<removed>"
      list=":ds:18"
      placeholder=" "
      popovertarget=":ds:18"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="true"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Sogndal"
        role="option"
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
    id="<removed>"
  >
    Velg en destinasjon
  </label>
  <ds-suggestion>
    <input
      aria-autocomplete="list"
      aria-controls=":ds:2"
      aria-expanded="true"
      aria-label="Velg en destinasjon​​​​​"
      autocomplete="off"
      data-label="Velg en destinasjon"
      id="<removed>"
      list=":ds:2"
      placeholder=" "
      popovertarget=":ds:2"
      role="combobox"
      type="text"
    >
    <del
      aria-label="Tøm"
      hidden
      role="button"
    >
    </del>
    <u-datalist
      aria-labelledby="<removed>"
      aria-multiselectable="false"
      data-floating="bottom"
      data-nofilter
      data-sr-plural="%d forslag"
      data-sr-singular="%d forslag"
      id="<removed>"
      popover="manual"
      role="listbox"
      style="--_ds-floating-arrow-x: <removed>; --_ds-floating-arrow-y: <removed>; width: 1166px; max-height: 773px; translate: <removed>;"
      tabindex="-1"
    >
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Sogndal"
        role="option"
        tabindex="-1"
        value="Sogndal"
      >
        Sogndal
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Oslo"
        role="option"
        tabindex="-1"
        value="Oslo"
      >
        Oslo
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Brønnøysund"
        role="option"
        tabindex="-1"
        value="Brønnøysund"
      >
        Brønnøysund
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Stavanger"
        role="option"
        tabindex="-1"
        value="Stavanger"
      >
        Stavanger
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Trondheim"
        role="option"
        tabindex="-1"
        value="Trondheim"
      >
        Trondheim
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Bergen"
        role="option"
        tabindex="-1"
        value="Bergen"
      >
        Bergen
        <div>
          Kommune
        </div>
      </u-option>
      <u-option
        aria-disabled="false"
        aria-hidden="false"
        aria-selected="false"
        label="Lillestrøm"
        role="option"
        tabindex="-1"
        value="Lillestrøm"
      >
        Lillestrøm
        <div>
          Kommune
        </div>
      </u-option>
    </u-datalist>
  </ds-suggestion>
</ds-field>
`;
